Tweet generation from id of twitter account. Tweets are currently too long. Intelligent trimming is not working.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "g++ build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [],
+            "program": "a.out",
+            "args": ["-u", "jmglaser@udel.edu", "-p", "Q1g$hGuu2"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
